--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
           docker_layer_caching: true
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t flauberjp/udagram-reverseproxy:$TAG .
+          docker build -t flauberjp/udagram-reverseproxy:$TAG -t flauberjp/udagram-reverseproxy:latest .
           echo $DOCKER_PASSWORD | docker login -u flauberjp --password-stdin
-          docker push flauberjp/udagram-reverseproxy:$TAG
+          docker push flauberjp/udagram-reverseproxy --all-tags
 
 workflows:
   my-workflow:
