adjusting upstream server names

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,10 @@ error_log /dev/stdout debug;
 http {
  sendfile on;
  upstream user {
-     server backend-user:8081;
+     server user:8081;
  }
  upstream feed {
-     server backend-feed:8082;
+     server feed:8082;
  }
  proxy_set_header   Host $host;
  proxy_set_header   X-Real-IP $remote_addr;
