--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,10 @@ error_log /dev/stdout debug;
 http {
  sendfile on;
  upstream user {
-     server user:8081;
+     server backend-user:8081;
  }
  upstream feed {
-     server feed:8082;
+     server backend-feed:8082;
  }
  proxy_set_header   Host $host;
  proxy_set_header   X-Real-IP $remote_addr;
@@ -19,10 +19,10 @@ http {
  server {
      listen 8080;
      location /api/v0/feed {
-         proxy_pass         http://feed;
+         proxy_pass         http://backend-feed;
      }
      location /api/v0/users {
-         proxy_pass         http://user;
+         proxy_pass         http://backend-user;
      }            
  }
 }
