--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,8 @@ http {
  server {
      listen 8080;
      location /api/v0/feed {
+         proxy_read_timeout 300s;
+         proxy_connect_timeout 75s;
          proxy_pass         http://backend-feed;
      }
      location /api/v0/users {
