--- a/nginx.conf
+++ b/nginx.conf
@@ -19,12 +19,10 @@ http {
  server {
      listen 8080;
      location /api/v0/feed {
-         proxy_read_timeout 300s;
-         proxy_connect_timeout 75s;
-         proxy_pass         http://backend-feed;
+         proxy_pass         http://feed;
      }
      location /api/v0/users {
-         proxy_pass         http://backend-user;
+         proxy_pass         http://user;
      }            
  }
 }
