add /health endpoint

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,11 @@ http {
      }
      location /api/v0/users {
          proxy_pass         http://user;
-     }            
+     }     
+     location /health {
+        access_log off;
+        add_header 'Content-Type' 'application/json';
+        return 200 '{"status":"UP"}';
+    }       
  }
 }
