--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
 version: 2.1
 
 orbs:
-  docker: circleci/docker@1.7.0
+  docker: circleci/docker@1.7.0\\
+  aws-eks: circleci/aws-eks@2.2.0
+  kubernetes: circleci/kubernetes@1.3
 
 jobs:
   my-job:
@@ -13,17 +15,24 @@ jobs:
           password: $DOCKER_PASSWORD # context / project UI env-var reference
     steps:
       - checkout
-      #- docker/install-docker
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
       - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t flauberjp/udagram-reverseproxy:$TAG -t flauberjp/udagram-reverseproxy:latest .
+          docker build -t flauberjp/udagram-reverseproxy:<< pipeline.number >> -t flauberjp/udagram-reverseproxy:latest .
           echo $DOCKER_PASSWORD | docker login -u flauberjp --password-stdin
           docker push flauberjp/udagram-reverseproxy --all-tags
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: MyEKSCluster
+          install-kubectl: true
 
 workflows:
   my-workflow:
     jobs:
-      - my-job
+      - my-jo
+      - aws-eks/update-container-image:
+          cluster-name: MyEKSCluster
+          resource-name: deployment/backend-feed
+          container-image-updates: "backend-feed=flauberjp/udagram-api-feed:<< pipeline.number >>"
+          requires:
+            - my-job
